fix(style): overflow in katex block

--- a/src/styles/markdown.less
+++ b/src/styles/markdown.less
@@ -369,9 +369,7 @@
 	&-display {
 		margin: 0px;
 		text-align: inherit;
-	}
 
-	&-block {
 		padding-bottom: 2px;
 		overflow-x: auto;
 		overflow-y: hidden;
